--- a/changelog.txt
+++ b/changelog.txt
@@ -1,17 +1,35 @@
 ÚLTIMAS ALTERAÇÕES:
 
+
+13/06/2025:
+
+* Relatórios de vendas por vendedores, vendas por usuários, fechamento do dia e todos que aparecem espécies de pagamentos colocar filtro de data emissão para atender o fiscal.
+* Relatório de Analise divergência de datas digitação e autorização da nota.
+* Alteração na forma que é feita a validação da permissão de alterar preço / limite de desconto.
+* Correção falha quando faz o pedido, recebe e da uma rejeição, não finaliza e  apaga o recebimento pra corrigir algo ele fica bloqueado.
+* Falha pedido ficando vermelho quando exclui o recebimento ao invés de branco.
+* IBPT 251F.
+
+*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-**-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-.
+
 30/05/2025:
 
 * Correção falha trigger markup.
+
+*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-**-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-.
 
 28/05/2025:
 
 * Correção falha que não não somava quantidade e volume na aba de transportadora no faturamento.
 * Correção de falha ao dar um desconto fechava o pedido e precisava reabrir.
 
+*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-**-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-.
+
 27/05/2025:
 
 * Alterado a SP de ficha kardex para retirar a condição de data do estoque atual  /*AND SP_EMP_MOVIMENTOESTOQUE_2.DT_MOVIMENTO <= CURRENT_DATE*/ -- a condição acima foi comentada, pois foi identificado uma falha, onde o estoque lançado numa data futura não aparecia no estoque do cadastro--exemplo a data de hoje é 27/05/2025 e a nota foi data a entrada 31/05/2025 essa do dia 31/05 não entra por causa do current_date
+
+*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-**-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-.
 
 24/05/2025:
 
